:iphone: Fix spacing.

--- a/frontend/scss/components/templates/home.scss
+++ b/frontend/scss/components/templates/home.scss
@@ -38,7 +38,7 @@
   .#{organism('stage')} {
     &-content {
       grid-column: 5 / 20;
-      margin-bottom: 13vw;
+      margin-bottom: 33vw;
       text-align: center;
       
       @media screen and (min-width: 768px) {
